Fix details overview page header on mobile

--- a/static/sass/_charmhub_p-header.scss
+++ b/static/sass/_charmhub_p-header.scss
@@ -1,12 +1,41 @@
 @mixin charmhub-p-header {
+  .p-charm-header__container {
+    align-items: center;
+    display: flex;
+
+    @media screen and (max-width: $breakpoint-medium - 1) {
+      align-items: flex-start;
+      flex-direction: column;
+    }
+  }
+
   .p-charm-header {
     &__code {
       display: inline-block;
-      padding-left: $spv-outer--small;
+      margin-block-end: 1rem;
+
+      @media screen and (min-width: $breakpoint-medium) {
+        margin-block-end: 0;
+        padding-inline-start: $spv-outer--small;
+      }
 
       code {
         background-color: transparent;
         box-shadow: none;
+
+        @media screen and (max-width: $breakpoint-medium - 1) {
+          margin-block-end: 1rem;
+          margin-inline-start: 0;
+        }
+      }
+    }
+
+    .p-button--neutral {
+      margin-block-end: 0;
+      width: fit-content;
+
+      @media screen and (max-width: $breakpoint-medium - 1) {
+        margin-block-end: 0.5rem;
       }
     }
 
@@ -27,8 +56,8 @@
         margin-inline-end: 1rem;
         max-height: 4rem;
         max-width: 4rem;
+        min-width: 4rem;
         overflow: hidden;
-        width: 4rem;
 
         .p-media-object__image {
           transform: scale(1.1);
